--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,25 +1,156 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:tools="http://schemas.android.com/tools"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-android:alpha=".95"
-android:background="@drawable/background"
-android:focusable="true"
-android:focusableInTouchMode="true"
-tools:context=".MainActivity">
 
+tools:context=".MainActivity"
+    >
+
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+
+    >
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:alpha=".95"
+        android:background="@drawable/background"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        tools:context=".second_main"
+        android:visibility="gone"
+
+        >
+
+
+        <ImageView
+            android:id="@+id/image_icon"
+            android:layout_width="@dimen/_100sdp"
+            android:layout_height="@dimen/_100sdp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:scaleType="centerCrop" />
+
+        <TextView
+            android:id="@+id/Login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/image_icon"
+            android:layout_marginLeft="@dimen/_20sdp"
+            android:layout_marginRight="@dimen/_20sdp"
+            android:layout_marginTop="@dimen/_30sdp"
+            android:maxLength="15"
+            android:text="Login"
+            android:textAlignment="center"
+            android:textColor="#fff"
+            android:textSize="30sp" />
+
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/login_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/Login"
+            android:layout_marginLeft="@dimen/_20sdp"
+            android:layout_marginRight="@dimen/_20sdp"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:drawablePadding="@dimen/_15sdp"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
+            android:maxLines="1"
+            android:textColor="	#010B13"
+            android:textColorHint="#fff"
+            android:textSize="20sp" />
+        <RelativeLayout
+            android:id="@+id/relative2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/login_email">
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:drawablePadding="15dp"
+                android:inputType="textPassword"
+                android:maxLines="1"
+                android:maxLength="15"
+                android:textColor="#53c39a"
+                android:textColorHint="#fff"
+                android:textSize="20sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_20sdp"
+                android:layout_marginRight="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_20sdp"
+
+                app:passwordToggleEnabled="true">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawablePadding="@dimen/_15sdp"
+                    android:hint="Password"
+                    android:textColor="	#010B13"
+                    android:textColorHint="#fff"
+                    android:inputType="textPassword"/>
+            </com.google.android.material.textfield.TextInputLayout>
+
+        </RelativeLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/relative2"
+            android:layout_marginLeft="@dimen/_25sdp"
+            android:clickable="true"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:text="Forgot Password !!"
+            android:textColor="#AAFAC8"
+            android:textStyle="bold" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:text="Continue"
+            android:textColor="#fff"
+            android:foreground="?attr/selectableItemBackground"
+            android:layout_below="@id/relative2"
+            android:layout_marginLeft="@dimen/_20sdp"
+            android:layout_marginRight="@dimen/_20sdp"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:textSize="20sp" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Signup"
+            android:textAllCaps="false"
+            android:textColor="#fff"
+
+            android:background="?attr/actionBarItemBackground"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"/>
+
+    </RelativeLayout>
 <RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:alpha=".95"
+    android:background="@drawable/background"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
+    >
 <ImageView
     android:id="@+id/image"
-    android:layout_width="100dp"
-    android:layout_height="100dp"
+    android:layout_width="@dimen/_100sdp"
+    android:layout_height="@dimen/_100sdp"
     android:layout_centerHorizontal="true"
-    android:layout_marginTop="20dp"
-    android:layout_marginBottom="20dp"
+    android:layout_marginTop="@dimen/_20sdp"
+    android:layout_marginBottom="@dimen/_20sdp"
     android:scaleType="centerCrop"
     android:src="@drawable/question" />
 
@@ -28,9 +159,9 @@ tools:context=".MainActivity">
     android:layout_width="match_parent"
     android:layout_below="@id/image"
     android:id="@+id/linear_name"
-    android:layout_marginLeft="20dp"
-    android:layout_marginRight="20dp"
-    android:layout_marginTop="40dp"
+    android:layout_marginLeft="@dimen/_20sdp"
+    android:layout_marginRight="@dimen/_20sdp"
+    android:layout_marginTop="@dimen/_20sdp"
     android:layout_height="wrap_content">
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/name"
@@ -38,7 +169,7 @@ tools:context=".MainActivity">
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:drawablePadding="15dp"
+        android:drawablePadding="@dimen/_20sdp"
         android:hint="Name"
         android:maxLength="15"
         android:maxLines="1"
@@ -52,18 +183,20 @@ tools:context=".MainActivity">
        android:layout_below="@id/linear_name"
        android:layout_height="wrap_content"
        android:id="@+id/radio"
-       android:layout_marginTop="20dp"
-       android:layout_marginLeft="20dp"
-       android:layout_marginRight="20dp"
+       android:layout_marginTop="@dimen/_20sdp"
+       android:layout_marginLeft="@dimen/_20sdp"
+       android:layout_marginRight="@dimen/_20sdp"
        >
 
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
+           android:weightSum="3"
+           android:visibility="gone"
            android:layout_above="@+id/view_below" >
 
-           <RadioButton android:id="@+id/male"
+           <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
@@ -75,7 +208,6 @@ tools:context=".MainActivity">
                android:onClick="onRadioButtonClicked"/>
 
            <RadioButton
-               android:id="@+id/female"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
@@ -84,84 +216,152 @@ tools:context=".MainActivity">
                android:textSize="20sp"
                android:text="Female"
                android:textColor="	#010B13" />
+
+           <Spinner
+               android:layout_weight="1"
+                android:textAlignment="center"
+               android:layout_width="0dp"
+               android:layout_height="wrap_content"
+               android:text="[Select a Class]" />
        </RadioGroup>
 
    </LinearLayout>
 
 
     <androidx.appcompat.widget.AppCompatEditText
-    android:id="@+id/email"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_below="@id/radio"
-    android:layout_marginLeft="20dp"
-    android:layout_marginRight="20dp"
-    android:layout_marginTop="20dp"
-    android:drawablePadding="15dp"
-    android:hint="Email"
-    android:inputType="textEmailAddress"
-    android:maxLines="1"
-    android:textColor="	#010B13"
-    android:textColorHint="#fff"
-    android:textSize="20sp" />
+        android:id="@+id/etPhoneNumber"
+        android:layout_width="385dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/linear_name"
+        android:layout_marginLeft="@dimen/_20sdp"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:layout_marginRight="@dimen/_20sdp"
+        android:drawablePadding="@dimen/_15sdp"
+        android:hint="Mobile No."
+        android:inputType="number"
+        android:maxLength="14"
+
+        android:maxLines="1"
+        android:text="(+91)"
+        android:textColor="	#010B13"
+        android:textColorHint="#fff"
+        android:textSize="20sp" />
+
+
+    <RelativeLayout
+        android:id="@+id/citypin"
+        android:layout_below="@id/etPhoneNumber"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/_20sdp"
+        android:layout_marginRight="@dimen/_20sdp"
+        android:layout_marginTop="@dimen/_20sdp"
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="2"
+
+            >
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/city"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawablePadding="@dimen/_15sdp"
+                android:hint="City"
+                android:layout_weight="1"
+                android:textColor="	#010B13"
+                android:textColorHint="#fff"
+                android:inputType="textCapWords"/>
+
+
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/signup_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/citypin"
+        android:layout_marginLeft="@dimen/_20sdp"
+        android:layout_marginRight="@dimen/_20sdp"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:drawablePadding="@dimen/_15sdp"
+        android:hint="Email"
+        android:inputType="textEmailAddress"
+        android:maxLines="1"
+        android:textColor="	#010B13"
+        android:textColorHint="#fff"
+        android:textSize="20sp" />
 
 <RelativeLayout
+    android:visibility="gone"
     android:id="@+id/relative"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_below="@id/email">
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:drawablePadding="15dp"
-        android:inputType="textPassword"
-        android:maxLines="1"
-        android:maxLength="15"
-        android:textColor="#010B13"
-        android:textColorHint="#fff"
-        android:textSize="20sp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="20dp"
-
-        app:passwordToggleEnabled="true">
+    android:layout_below="@id/signup_email">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawablePadding="15dp"
+            android:drawablePadding="@dimen/_15sdp"
             android:hint="Password"
             android:textColor="	#010B13"
             android:textColorHint="#fff"
-            android:inputType="textPassword"/>
-    </com.google.android.material.textfield.TextInputLayout>
+            android:inputType="textPassword"
+            android:layout_marginLeft="@dimen/_20sdp"
+            android:layout_marginRight="@dimen/_20sdp"
+            android:layout_marginTop="@dimen/_20sdp"
+            />
+
 
 </RelativeLayout>
+
+
 <Button
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/transparent"
     android:text="Let's   GO"
-    android:id="@+id/getStarted"
+    android:id="@+id/signup"
     android:textColor="#fff"
     android:foreground="?attr/selectableItemBackground"
     android:layout_below="@id/relative"
-    android:layout_marginTop="40dp"
-    android:layout_marginLeft="20dp"
-    android:layout_marginRight="20dp"
+    android:layout_marginTop="@dimen/_40sdp"
+    android:layout_marginLeft="@dimen/_20sdp"
+    android:layout_marginRight="@dimen/_20sdp"
     android:textSize="20sp" />
 
     <Button
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Login"
         android:textAllCaps="false"
         android:textColor="#fff"
-        android:onClick="LoginActivity"
         android:background="?attr/actionBarItemBackground"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:layout_marginLeft="@dimen/_20sdp"
+        android:layout_marginRight="@dimen/_20sdp"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"/>
-</RelativeLayout>Z
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
+
+
+</LinearLayout>
+    <TextView
+        android:layout_marginBottom="@dimen/_3sdp"
+        android:textAlignment="center"
+        android:textSize="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_30sdp"
+        android:onClick="gotohome"
+        android:text="Developed By MMIT"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"/>
+</RelativeLayout>
