--- a/app/src/main/res/layout/activity_navigation_menu.xml
+++ b/app/src/main/res/layout/activity_navigation_menu.xml
@@ -2,6 +2,7 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,6 +21,8 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/navheader"
+        app:itemTextAppearance="?android:attr/textAppearanceLarge"
+
         app:menu="@menu/activity_navigation__drawer" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
