--- a/app/src/main/res/menu/activity_navigation__drawer.xml
+++ b/app/src/main/res/menu/activity_navigation__drawer.xml
@@ -1,9 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-        <item
-            android:id="@+id/nav_Setting"
-            android:icon="@drawable/setting_drawer"
-            android:title="Settings" />
 
+
+    <item
+        android:id="@+id/lock"
+        android:checkable="true"
+        android:title="Details" >
+        <menu >
+
+            <item
+                android:id="@+id/Scholarship"
+                android:icon="@drawable/scholarship"
+                android:checked="false"
+                android:title="Notification"/>
+
+
+        </menu>
+    </item>
+    <item
+        android:id="@+id/btn_about"
+        android:icon="@drawable/info"
+        android:checked="false"
+        android:title="About"/>
 </menu>
+
