--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -12,27 +12,42 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-        <LinearLayout
+        <RelativeLayout
+            android:padding="@dimen/_5sdp"
+            android:background="#4C21AE"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="72dp"
             android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/nav_header_name"
-                android:layout_width="0dp"
-                android:layout_height="72dp"
-                android:layout_margin="0dp"
-                android:layout_weight="1"
-                android:background="#4C21AE"
-                android:foreground="?attr/selectableItemBackground"
-                android:paddingLeft="25dp"
-                android:paddingRight="25dp"
-                android:text="    MMIT-CET"
+            <TextView
+                android:id="@+id/Qid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="24sp"
+                android:layout_toRightOf="@+id/nav_header_name"
+                android:text="  MMIT-CET"
+                android:textStyle="bold"
+                android:layout_marginLeft="@dimen/_25sdp"
+                android:textColor="#FFFF"
                 android:textAlignment="textStart"
                 android:textAllCaps="true"
-                android:textColor="#FFFF"
-                android:textSize="24sp" />
-        </LinearLayout>
+                android:layout_centerVertical="true"
+
+                />
+
+            <Button
+
+                android:id="@+id/nav_header_name"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_width="@dimen/_25sdp"
+                android:layout_height="@dimen/_25sdp"
+                android:textSize="@dimen/_25sdp"
+                android:background="@drawable/side"
+                />
+
+
+
+        </RelativeLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -128,7 +143,27 @@
                 android:textSize="18sp" />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
+            <Button
+                android:id="@+id/video"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/_99sdp"
+                android:layout_marginHorizontal="@dimen/_20sdp"
+                android:layout_marginVertical="@dimen/_6sdp"
+                android:layout_weight="1"
+                android:background="@color/md_material_blue_800"
+                android:drawableRight="@drawable/yvideo"
+                android:foreground="?attr/selectableItemBackground"
+                android:paddingRight="@dimen/_20sdp"
+                android:text="Video"
+                android:textAllCaps="false"
+                android:textColor="#fff"
+                android:textSize="18sp" />
+        </LinearLayout>
 
 
     </LinearLayout>
